// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Components - test BoldText - snapshot 1`] = `
<Text
  style={
    {
      "backgroundColor": "red",
      "color": "rgb(28, 28, 30)",
      "fontSize": 18,
      "fontWeight": "bold",
      "opacity": 0.87,
    }
  }
>
  bold text
</Text>
`;

exports[`Component Components - test ErrorText - snapshot 1`] = `
<Text
  style={
    {
      "backgroundColor": "white",
      "color": "rgb(0, 122, 255)",
    }
  }
>
  error text
</Text>
`;

exports[`Component Components - test FadeText - snapshot 1`] = `
<Text
  style={
    {
      "backgroundColor": "red",
      "color": "rgb(28, 28, 30)",
      "opacity": 0.65,
    }
  }
>
  fade text
</Text>
`;

exports[`Component Components - test RegText - snapshot 1`] = `
<Text
  onPress={[MockFunction]}
  style={
    {
      "backgroundColor": "white",
      "color": "red",
      "fontSize": 18,
      "fontWeight": "600",
      "opacity": 1,
    }
  }
>
  reg text
</Text>
`;

exports[`Component Components - test UsdAmount - snapshot 1`] = `
<View
  style={
    {
      "alignItems": "baseline",
      "flexDirection": "row",
    }
  }
>
  <Text
    style={
      {
        "backgroundColor": "red",
        "color": undefined,
        "fontSize": 20,
      }
    }
  >
    $
  </Text>
  <Text
    style={
      {
        "backgroundColor": "red",
        "color": undefined,
        "fontSize": 20,
        "fontWeight": "700",
      }
    }
  >
     44.93
  </Text>
  <Text
    style={
      {
        "backgroundColor": "red",
        "color": undefined,
        "fontSize": 20,
      }
    }
  >
     USD
  </Text>
</View>
`;

exports[`Component Components - test ZecAmount - snapshot 1`] = `
<View
  style={
    {
      "alignItems": "baseline",
      "backgroundColor": "red",
      "flexDirection": "row",
    }
  }
>
  <Text
    style={
      {
        "color": "red",
        "fontSize": 20,
      }
    }
  >
    ᙇ
  </Text>
  <Text
    style={
      {
        "color": "red",
        "fontSize": 20,
        "fontWeight": "700",
      }
    }
  >
     1.1234
  </Text>
  <Text
    style={
      {
        "color": "red",
        "fontSize": 10,
        "paddingBottom": 0,
      }
    }
  >
    5678
  </Text>
  <Text
    style={
      {
        "color": "red",
        "fontSize": 20,
      }
    }
  >
     ZEC
  </Text>
</View>
`;

exports[`Component Components - test ZecPrice - snapshot 1`] = `
<Text
  style={
    {
      "color": "rgb(28, 28, 30)",
      "opacity": 0.65,
    }
  }
>
  $ 39.99 USD per ZEC
</Text>
`;
